--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20231013</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -26,6 +26,7 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
 </project>
